@@ -1,4 +1,4 @@
-/* $Id: miniwget.c,v 1.25 2009/08/07 14:44:51 nanard Exp $ */
+/* $Id: miniwget.c,v 1.26 2009/09/21 12:57:42 nanard Exp $ */
 /* Project : miniupnp
  * Author : Thomas Bernard
  * Copyright (c) 2005-2009 Thomas Bernard
@@ -33,7 +33,6 @@
 #endif
 
 #include "miniupnpcstrings.h"
-#include "miniwget.h"
 
 /* miniwget2() :
  * */
@@ -85,12 +84,30 @@ miniwget2(const char * url, const char * host,
 #endif
 	dest.sin_family = AF_INET;
 	dest.sin_port = htons(port);
+	n = connect(s, (struct sockaddr *)&dest, sizeof(struct sockaddr_in));
 #ifdef MINIUPNPC_IGNORE_EINTR
-	do {
-#endif
-		n = connect(s, (struct sockaddr *)&dest, sizeof(struct sockaddr_in));
-#ifdef MINIUPNPC_IGNORE_EINTR
-	} while(n < 0 && errno == EINTR);
+	while(n < 0 && errno == EINTR)
+	{
+		socklen_t len;
+		fd_set wset;
+		int err;
+		FD_ZERO(&wset);
+		FD_SET(s, &wset);
+		if((n = select(s + 1, NULL, &wset, NULL, NULL)) == -1 && errno == EINTR)
+			continue;
+		/*len = 0;*/
+		/*n = getpeername(s, NULL, &len);*/
+		len = sizeof(err);
+		if(getsockopt(s, SOL_SOCKET, SO_ERROR, &err, &len) < 0) {
+			perror("getsockopt");
+			closesocket(s);
+			return NULL;
+		}
+		if(err != 0) {
+			errno = err;
+			n = -1;
+		}
+	}
 #endif
 	if(n<0)
 	{
